# i8085-trace

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md
include/: disk_emu.h  gdb_stub.hpp  i8085_cpu.h  i8085_io_plugin.h  i8085_io_runtime.h  types.h
src/: 8085_core.c  disk_emu.cpp  gdb_stub.cpp  i8085_disasm.c  i8085_exec.c  i8085_state.c  io_runtime.cpp  main.cpp
test/: run_tests.py
test/disk_test/: disk_copy_test.py  disk_read_test.py
